<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.inventory.ItemAddEditActivity"
    android:background="@color/Fondo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a_adir_nuevo_tem"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="24dp" />

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/etCategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/categor_a"
            android:inputType="text"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/etCantidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cantidad"
            android:inputType="number"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/etImagenUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/url_imagen"
            android:inputType="textUri"
            android:layout_marginBottom="8dp" />

        <ImageView
            android:id="@+id/ivPreviewImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="16dp"
            android:scaleType="centerCrop"
            android:background="@drawable/border_preview_image"
            android:visibility="gone"
            android:contentDescription="@string/preview_imagen" />

        <Button
            android:id="@+id/btnLoadPreview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cargar_preview"
            android:backgroundTint="@color/Boton"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/btnSaveItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guardar_tem"
            android:backgroundTint="@color/Boton"/>

    </LinearLayout>
</ScrollView>