<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@color/material_dynamic_neutral95"
    tools:context=".ui.auth.RegisterActivity"
    android:backgroundTint="@color/Fondo">
    <ImageView
        android:id="@+id/imgLapiz"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/ic_lapiz"
        android:contentDescription="@string/cono_de_l_piz" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crear_nueva_cuenta"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/material_dynamic_neutral_variant10"
        android:layout_marginBottom="32dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmailRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:startIconDrawable="@drawable/ic_email"
        app:hintTextColor="@color/material_dynamic_neutral_variant30"
        app:boxStrokeColor="@color/material_dynamic_neutral_variant30"
        android:hint="@string/correo_electr">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmailRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:background="@color/Caja_Text"
            android:padding="16dp"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPasswordRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:startIconDrawable="@drawable/ic_lock"
        app:endIconMode="password_toggle"
        app:hintTextColor="@color/material_dynamic_neutral_variant30"
        app:boxStrokeColor="@color/material_dynamic_neutral_variant30"
        android:hint="@string/contrase_a">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPasswordRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:background="@color/Caja_Text"
            android:padding="16dp"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilConfirmPasswordRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:startIconDrawable="@drawable/ic_lock"
        app:endIconMode="password_toggle"
        app:hintTextColor="@color/material_dynamic_neutral_variant30"
        app:boxStrokeColor="@color/material_dynamic_neutral_variant30"
        android:hint="@string/confirmar_contrase_a">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etConfirmPasswordRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:background="@color/Caja_Text"
            android:padding="16dp"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrarse"
        android:backgroundTint="@color/Boton"
        android:textColor="@android:color/black"
        android:padding="12dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        app:cornerRadius="8dp"
        />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_sesion_cuenta"
        android:textColor="@color/material_dynamic_primary40"
        android:textSize="16sp"
        android:clickable="true"
        android:focusable="true"
        android:padding="8dp"
        android:height="48dp"
        />

</LinearLayout>