<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:elevation="2dp"
    android:padding="12dp"
    android:layout_marginBottom="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/Fondo">
    <ImageView
        android:id="@+id/imageItem"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:scaleType="centerCrop"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/textName"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/nombre_stri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textDescription"
        android:text="@string/descripci_n"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textQuantity"
        android:text="@string/cantidad_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/btnEdit"
            android:src="@android:drawable/ic_menu_edit"
            android:background="?android:selectableItemBackgroundBorderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageButton
            android:id="@+id/btnDelete"
            android:src="@android:drawable/ic_menu_delete"
            android:background="?android:selectableItemBackgroundBorderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>
